# thesis

./: .gitignore  README.md  graphics.ipynb  yayin_1.csv
code/: video_kisalt  video_kisalt.cpp
code/code_ai_gemini/: .gitattributes
code/code_ai_gemini/VideoStabilizer/: CMakeLists.txt
code/code_ai_gemini/VideoStabilizer/outputs/041225/: motion_data_1sec.csv  motion_data_3sec.csv  motion_data_7sec.csv  motion_data_full.csv
code/code_ai_gemini/VideoStabilizer/src/: hafta2_analiz.cpp  main.cpp
code/code_ai_gemini/all_in_one_stabilizer/: CMakeLists.txt
code/code_ai_gemini/all_in_one_stabilizer/src/: Stabilizer.cpp  false_main.cpp  main.cpp
s_114_outdoor_running_trail_daytime/: controlcam_gyro_log_104803_866754.txt
s_114_outdoor_running_trail_daytime/flo/: 000004.flo  000005.flo  000007.flo  000008.flo  000009.flo  000011.flo  000012.flo  000014.flo  000015.flo  000019.flo  000023.flo  000024.flo  000026.flo  000028.flo  000040.flo  000042.flo  000046.flo  000048.flo  000049.flo  000057.flo  000058.flo  000059.flo  000061.flo  000062.flo  000063.flo  000065.flo  000067.flo  000068.flo  000072.flo  000073.flo  000076.flo  000078.flo  000081.flo  000084.flo  000087.flo  000089.flo  000091.flo  000094.flo  000095.flo  000096.flo  (+178 more)
s_114_outdoor_running_trail_daytime/flo_back/: 000000.flo  000003.flo  000006.flo  000009.flo  000011.flo  000012.flo  000014.flo  000015.flo  000018.flo  000020.flo  000023.flo  000024.flo  000025.flo  000026.flo  000027.flo  000029.flo  (+229 more)
test_video/: controlcam_frame_timestamps_104803_866754.txt  controlcam_ois_log_104803_866754.txt
(+487 files in other folders)
